--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <select id="quizSelect" class="form-select">
       <option value="">-- CSVを選択 --</option>
       <option value="quizzes/pokemon1.csv">ポケモン 第1セット</option>
+      <option value="quizzes/pokemon2.csv">ポケモン 第2セット</option>
     </select>
   </div>
 
